--- a/Dockerfile.migrate
+++ b/Dockerfile.migrate
@@ -2,9 +2,11 @@ FROM node:20-alpine
 
 WORKDIR /app
 
-COPY . .
+COPY ./package.json ./package.json
 
 RUN npm ci
+
+COPY . .
 
 COPY scripts/migrate.sh /migrate.sh
 RUN chmod +x /migrate.sh
